# modbuspp

./: .gitignore  CMakeLists.txt  README.md  example.cpp  modbus.cpp  modbus.h  modbus_exception.h
.github/workflows/: cmake.yml
cmake/: modbusppConfig.cmake.in
docs/html/: _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  classes.html  classmodbus-members.html  classmodbus.html  classmodbus.js  classmodbus__acknowledge__exception-members.html  classmodbus__acknowledge__exception.html  classmodbus__acknowledge__exception.js  classmodbus__amount__exception-members.html  classmodbus__amount__exception.html  classmodbus__amount__exception.js  classmodbus__buffer__exception-members.html  classmodbus__buffer__exception.html  classmodbus__buffer__exception.js  classmodbus__connect__exception-members.html  classmodbus__connect__exception.html  classmodbus__connect__exception.js  classmodbus__exception-members.html  classmodbus__exception.html  classmodbus__exception.js  classmodbus__gateway__exception-members.html  classmodbus__gateway__exception.html  classmodbus__gateway__exception.js  classmodbus__illegal__address__exception-members.html  classmodbus__illegal__address__exception.html  classmodbus__illegal__address__exception.js  classmodbus__illegal__data__value__exception-members.html  classmodbus__illegal__data__value__exception.html  classmodbus__illegal__data__value__exception.js  classmodbus__illegal__function__exception-members.html  classmodbus__illegal__function__exception.html  classmodbus__illegal__function__exception.js  classmodbus__server__busy__exception-members.html  classmodbus__server__busy__exception.html  classmodbus__server__busy__exception.js  classmodbus__server__failure__exception-members.html  classmodbus__server__failure__exception.html  classmodbus__server__failure__exception.js  (+21 more)
docs/html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  classmodbus.tex  classmodbus__acknowledge__exception.eps  classmodbus__acknowledge__exception.tex  classmodbus__amount__exception.eps  classmodbus__amount__exception.tex  classmodbus__buffer__exception.eps  classmodbus__buffer__exception.tex  classmodbus__connect__exception.eps  classmodbus__connect__exception.tex  classmodbus__exception.eps  classmodbus__exception.tex  classmodbus__gateway__exception.eps  classmodbus__gateway__exception.tex  classmodbus__illegal__address__exception.eps  classmodbus__illegal__address__exception.tex  classmodbus__illegal__data__value__exception.eps  classmodbus__illegal__data__value__exception.tex  classmodbus__illegal__function__exception.eps  classmodbus__illegal__function__exception.tex  classmodbus__server__busy__exception.eps  classmodbus__server__busy__exception.tex  classmodbus__server__failure__exception.eps  classmodbus__server__failure__exception.tex  hierarchy.tex  index.tex  md__r_e_a_d_m_e.tex  refman.tex
example/: example.cpp
